<resources>
    <string name="app_name">lab5</string>
    <string name="text">Hello world!</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="color">Color</string>
    <string name="background_2">Alternative background</string>
    <string name="addtextfield">Add the text field</string>
    <string name="exit">Exit</string>
</resources>