<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/color"
        android:title="@string/color">
        <menu>
            <item android:id="@+id/blue"
                android:title="@string/blue"/>
            <item android:id="@+id/red"
                android:title="@string/red" />
            <item android:id="@+id/green"
                android:title="@string/green" />
            <item android:id="@+id/black"
                android:title="@string/black" />
            <item android:id="@+id/yellow"
                android:title="@string/yellow" />

        </menu>
    </item>
    <item android:id="@+id/background_2"
        android:title="@string/background_2" />
    <item android:id="@+id/textfield"
        android:title="@string/addtextfield" />
    <item android:id="@+id/exit"
        android:title="@string/exit" />

</menu>